--- a/.github/workflows/activity-graph.yml
+++ b/.github/workflows/activity-graph.yml
@@ -2,18 +2,48 @@ name: Update Activity Graph
 
 on:
   schedule:
-    - cron: '0 1 * * *'       # Corre a la 1 AM UTC cada día
-  workflow_dispatch:         # Permite disparar manualmente
+    - cron: '0 1 * * *'
+  workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Generate Activity Graph
-        uses: ahmedkhalf/github-readme-activity-graph@v1
+      - name: Download SVG de Activity Graph
+        run: |
+          curl "https://github-readme-activity-graph.vercel.app/graph?username=Jfernandez27&theme=react-dark&days=30" \
+            -o README-activity.svg
+
+      - name: Commit y push del SVG
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          output: 'README-activity.svg'
+          commit_message: "chore: update Activity Graph"
+          file_pattern: "README-activity.svg"name: Update Activity Graph
+
+on:
+  schedule:
+    - cron: '0 1 * * *'
+  workflow_dispatch:
+
+jobs:
+  generate:
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Download SVG de Activity Graph
+        run: |
+          curl "https://github-readme-activity-graph.vercel.app/graph?username=TU_USUARIO&theme=react-dark" \
+            -o README-activity.svg
+
+      - name: Commit y push del SVG
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "chore: update Activity Graph"
+          file_pattern: "README-activity.svg"
