--- a/.github/workflows/user-global-badges.yml
+++ b/.github/workflows/user-global-badges.yml
@@ -18,12 +18,10 @@ jobs:
         with:
           persist-credentials: true
 
-      - name: Instalar GH CLI, badgen-cli y badgen-icons
+      - name: Instalar GH CLI
         run: |
           sudo apt-get update
           sudo apt-get install -y gh
-          npm install -g badgen-cli
-          npm install -g badgen-icons
 
       - name: Autenticar GH CLI con PAT
         run: |
@@ -88,16 +86,16 @@ jobs:
           echo "FOLLOWERS=$FOLLOWERS" >> $GITHUB_ENV
           echo "STARRED=$STARRED" >> $GITHUB_ENV
 
-      - name: Generar badges SVG con estilo Shields.io
+      - name: Generar badges SVG con Shields.io
         run: |
           mkdir -p badges
-          badgen --label="Repositories" --status="$REPO_COUNT" --color="0EA5E9" --label-color="101010" > badges/public-repos.svg
-          badgen --label="Total Commits" --status="$COMMIT_COUNT" --color="10B981" --label-color="101010" > badges/total-commits.svg
-          badgen --label="PR Contributions" --status="$PR_CONTRIB" --color="22C55E" --label-color="101010" > badges/pr-contrib.svg
-          badgen --label="Issue Contributions" --status="$ISSUE_CONTRIB" --color="DC2626" --label-color="101010" > badges/issue-contrib.svg
-          badgen --label="Followers" --status="$FOLLOWERS" --color="FACC15" --label-color="101010" > badges/followers.svg
-          badgen --label="Starred Repositories" --status="$STARRED" --color="F97316" --label-color="101010" > badges/starred.svg
-          badgen --label="Languages" --status="PHP | Python | JS" --color="D946EF" --label-color="101010" > badges/languages.svg
+          curl -s -o badges/public-repos.svg "https://img.shields.io/badge/Repositories-${REPO_COUNT}-0EA5E9?style=flat&labelColor=101010"
+          curl -s -o badges/total-commits.svg "https://img.shields.io/badge/Total%20Commits-${COMMIT_COUNT}-10B981?style=flat&labelColor=101010"
+          curl -s -o badges/pr-contrib.svg "https://img.shields.io/badge/PR%20Contributions-${PR_CONTRIB}-22C55E?style=flat&labelColor=101010"
+          curl -s -o badges/issue-contrib.svg "https://img.shields.io/badge/Issue%20Contributions-${ISSUE_CONTRIB}-DC2626?style=flat&labelColor=101010"
+          curl -s -o badges/followers.svg "https://img.shields.io/badge/Followers-${FOLLOWERS}-FACC15?style=flat&labelColor=101010"
+          curl -s -o badges/starred.svg "https://img.shields.io/badge/Starred%20Repositories-${STARRED}-F97316?style=flat&labelColor=101010"
+          curl -s -o badges/languages.svg "https://img.shields.io/badge/Languages-PHP%20%7C%20Python%20%7C%20JS-D946EF?style=flat&labelColor=101010"
 
       - name: Commit y push de badges
         uses: stefanzweifel/git-auto-commit-action@v4
